k8s-mediaserver/sonarr/sonarr_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: default
spec:
  ports:
  - name: sonarr-port
    port: 8989
    protocol: TCP
    targetPort: 8989
  selector:
    app: sonarr
  sessionAffinity: None
  type: ClusterIP
