k8s-mediaserver/sonarr/sonarr_ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sonarr
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints: 
    - websecure
  routes:
    - match: Host(`sonarr.local.izroll.dev`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
  tls:
    secretName: local-izroll-dev-tls
